# bun-wgpu

./: .gitignore  _dev.sh  bun.lockb  generate-wgpu-bindings.ts  generate-wgpu-bindings_tmp_exec  install.ts  package.json  readme.md
misc/: crash_report_m1_arm64.md  error_log_m1_x64
src/: dynload.ts  main.ts  wgpu-ext.ts  wgpu.ts
src/glfw/: index.ts  lib.ts
utils_lib/: CMakeLists.txt  lib.cpp  lib.ts
